--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="p">
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="pp">Shh click me</a>
   </div>
+    <h1 class="z">Zoom In Here ↓</h1>
   </footer>
   <script src="script.js"></script>
 </html>
