--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   </body>
   <footer>
-    <h1 class="z">Zoom In Here ↓</h1>
+    <h1 class="z">Zoom In Bottom Left!</h1>
     <div class="p">
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="pp">Shh click me</a>
   </div>
