--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <footer>
     <h1 class="z">Zoom In Bottom Left!</h1>
     <div class="p">
+      <a class="y">Paste you.suck() into the console</a>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="pp">Shh click me</a>
   </div>
   </footer>
